--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -1,6 +1,4 @@
-<link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
-
 <body>
-background-color: black;
+background-color: #678450;
 
 </body>
